--- a/style.css
+++ b/style.css
@@ -37,8 +37,19 @@ body {
     background-color: rgb(0, 0, 0);
     height: 50px;
 }
+@media screen and (max-width:766) {
 .content
 {
-    background:gray;
+    background:rgb(255, 255, 255);
     width: 100%;
+}
+.sideboard
+{
+    background-color:rgb(252, 203, 98);
+}
+}
+
+.banner
+{
+    background-color: skyblue;
 }
