--- a/style.css
+++ b/style.css
@@ -43,13 +43,15 @@ body {
     background:rgb(255, 255, 255);
     width: 100%;
 }
-.sideboard
-{
-    background-color:rgb(252, 203, 98);
 }
-}
-
-.banner
+@media screen and (min-width:767) and (max-width :992 ) {
+ .banner
 {
     background-color: skyblue;
 }
+.sideboard
+{
+    background-color: rgb(252, 203, 98) ;
+}
+
+    }
